# FP_ASM_LIB_DEV

./: .gitignore  3D_ENGINE_ALGORITHMS_STATUS.md  ADDRESSING_PERFORMANCE_CONCERNS.md  ALGORITHMS_SHOWCASE.md  ASSEMBLY_OPTIMIZATION_REPORT.md  CMakeLists.txt  COMPLETION_SUMMARY_NOV_2025.md  CONTRIBUTING.md  ENGINE_MVP.md  ENGINE_PORT_TO_FP_PLAN.md  ENHANCEMENTS.md  FINAL_REPORT.md  FP_CUBE_SUCCESS.md  FP_ENGINE_ARCHITECTURE.md  FP_ENGINE_MANIFESTO.md  FP_ENGINE_PHASE1_STATUS.md  FP_FIRST_DEMO_STATUS.md  FP_GRAPHICS_DISCOVERY.md  FP_PHILOSOPHY.md  FP_SSAO_DESIGN.md  GENERIC_TYPE_SYSTEM_SUMMARY.md  GITHUB_READY.txt  GITHUB_RELEASE.md  GPU_OPTIMIZATION_COMPLETE.md  GPU_PROFILING.md  GPU_READY_TO_TEST.md  IMPLEMENTATION_COMPLETE.md  KMEANS_README.md  LICENSE  MODULAR_ARCHITECTURE.md  MODULE_7_MATRIX_READY.md  Makefile  OPENCL_SETUP.md  OpenCL.def  PHASE1_COMPLETE.md  PHASE2_REFACTOR_PLAN.md  PHASE2_SSAO_IMPLEMENTATION_COMPLETE.md  PROGRESS_CHECKPOINT.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.md  (+189 more)
.claude/: settings.local.json
benchmarks/: demo_3d_math_benchmark.c  demo_audio_rms.c  demo_bench.c  demo_bench_3d.c  demo_bench_debug.c  demo_bench_fused_folds.c  demo_bench_fused_maps.c  demo_bench_predicates.c  demo_bench_reductions.c  demo_bench_rolling_window.c  demo_bench_scans.c  demo_bench_simple_maps.c  demo_bugfix_validation.c  demo_compaction_benchmark.c  demo_correlation.c  demo_descriptive_stats.c  demo_essentials.c  demo_filter.c  demo_fp_trinity.c  demo_kmeans.c  demo_linear_regression.c  demo_monte_carlo.c  demo_moving_averages.c  demo_moving_avg.c  demo_outliers.c  demo_partition.c  demo_percentiles.c  demo_take_drop.c  demo_tier2.c  demo_tier3.c
docs/: ACHIEVEMENT_SUMMARY.md  ALGORITHM_7_DESIGN.md  ALGORITHM_7_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  ASSEMBLY_FINDINGS.md  BENCHMARK_RESULTS.md  BUGFIX_REPORT.md  CLAUDE.md  COMPLETE_LIBRARY_REPORT.md  COMPLETE_PURITY_AUDIT.md  COMPOSITION_AUDIT.md  COMPOSITION_METHODOLOGY.md  COMPOSITION_PATTERN.md  CONST_CORRECTNESS_AUDIT.md  FP_ALGORITHMS_SPECIFICATION.md  FP_LANGUAGE_EQUIVALENCE.md  FP_OPERATIONS_SUMMARY.md  FUNCTION_PURITY_AUDIT.md  GENERIC_TYPE_SYSTEM.md  LESSONS_LEARNED.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_TIERS.md  PURITY_COMPLETE_SUMMARY.md  PURITY_FIXES_PHASE1.md  QUICK_START.md  README.md  REFACTORING_ACHIEVEMENTS.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TEST_GUIDELINES.md  TIER1_COMPLETENESS_REPORT.md  TIER2_COMPLETENESS_REPORT.md  TIER3_COMPLETENESS_REPORT.md  USAGE_GUIDE.md  VERIFICATION_REPORT.md  codex_assembly_review_notes.md  codex_todo.md  linux_build_assessment.md
docs_html/: ACHIEVEMENT_SUMMARY.html  API_REFERENCE.html  COMPLETE_LIBRARY_REPORT.html  QUICK_START.html  README.html  TIER1_COMPLETENESS_REPORT.html  TIER2_COMPLETENESS_REPORT.html  TIER3_COMPLETENESS_REPORT.html  index.html
examples/: analyze_error.c  demo.c  explain_alignment.c  hello_test.c  test.asm  verify_alignment.c
include/: application.h  ecs.h  fp.h  fp_3d_math.h  fp_3d_math_wrapper.h  fp_core.h  fp_ecs.h  fp_engine_algorithms.h  fp_engine_types.h  fp_generic.h  fp_graphics_engine.h  fp_lighting.h  fp_math.h  fp_mesh_generation.h  fp_msaa.h  fp_ray_tracer.h  fp_shadow_mapping.h  fp_types.h  gl_extensions.h  platform.h  renderer.h  renderer_modern.h
src/: ecs.c  shaders_embedded.c
src/algorithms/: 3d_math_wrapper.c  fp_decision_tree.c  fp_fft.c  fp_kmeans.c  fp_lighting.c  fp_linear_regression.c  fp_matrix_ops.c  fp_monte_carlo.c  fp_naive_bayes.c  fp_neural_network.c  fp_pca.c  fp_quaternion_ops.c  fp_radix_sort.c  fp_ray_tracer.c  fp_time_series.c  fp_vector_ops.c
src/asm/: 3d_math_kernels.asm  fp_core_3dmath_f32.asm  fp_core_compaction.asm  fp_core_correlation.asm  fp_core_descriptive_stats.asm  fp_core_essentials.asm  fp_core_fused_folds.asm  fp_core_fused_folds_f32.asm  fp_core_fused_folds_i16.asm  fp_core_fused_folds_i32.asm  fp_core_fused_folds_i8.asm  fp_core_fused_folds_u16.asm  fp_core_fused_folds_u32.asm  fp_core_fused_folds_u64.asm  fp_core_fused_folds_u8.asm  fp_core_fused_maps.asm  (+30 more)
tests/: test_3d_math.c  test_3d_math_correctness.c  test_comprehensive.c  test_corr_minimal.c  test_gcc.c  test_ma_minimal.c  test_purity.c  test_simple.c  test_sma_fair.c  test_stats_minimal.c  test_tier2_simple.c  test_tier3_minimal.c  test_zip_add_only.c  test_zip_timed.c
(+27 files in other folders)
